# comfy-dev-cli

./: .gitignore  README.md
cli/: 3d_index_config.yml  __init__.py  accounts.db  config.py  debug_branch_protection.py  main.py  pyproject.toml  requirements.txt  update_rulesets.py
cli/commands/: __init__.py  analyze_issues.py  clone_all.py  clone_bindings.py  clone_cudageom.py  clone_utils.py  clone_wheel_repos.py  commits.py  download_all_issues.py  download_issues.py  get.py  license.py  pages.py  publish.py  readme.py  render.py  runners.py  screenshot.py  show.py  start.py  status.py  test.py  teststatus.py  vram_monitor.py
cli/dashboard/: __init__.py  app.py
cli/dashboard/templates/: discussions.html  forks.html  index.html  issue_analysis.html  issue_analysis_detail.html  issue_analysis_repo.html  issues.html  pages.html  pages_browse.html  readme_browse.html  repos.html
cli/index/: __init__.py  classify.py  fetch.py  generate.py
cli/index/utils/: __init__.py  github.py  html_builder.py  media.py  node_parser.py  (+1 more)
cli/oneshot/: __init__.py  cli.py  considerations-prompt.md  discussion-prompt.md  extractors.py  fill-prompt.md  initial-assessment-prompt.md  patterns.py  prompts.py  pyproject.toml  requirements.txt  validator.py  workflows-prompt.md  wrapper-prompt.md
cli/paper-mds/: actionmesh-2026.md  arxiv-2501.05138.md  arxiv-2502.20110.md  arxiv-2503.11651.md  arxiv-2507.02546.md  arxiv-2510.06219.md  arxiv-2510.22975.md  arxiv-2601.05138.md  arxiv-2604.14268.md  arxiv-2605.10922.md
cli/projects/: __init__.py  commands.py
cli/watch/: __init__.py  discord_bot.py  filter.py  main.py  state.py
(+83 files in other folders)
