[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oneshot"
version = "0.1.0"
description = "Tooling for one-shot ComfyUI wrapper implementations"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pdf = ["marker-pdf>=1.0.0"]

[project.scripts]
oneshot = "cli:app"

[tool.setuptools]
py-modules = ["cli", "extractors", "patterns", "validator", "prompts"]
